--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,15 @@
     <string name="deleteAll">Eliminar todos</string>
     <string name="singleDelteted">¡Producto eliminado exitosamente!</string>
     <string name="allDeleted">¡Productos eliminados exitosamente!</string>
+    <string name="retry_button">Reintentar</string>
+    <string name="panes">Pan</string>
+    <string name="bebdasDep">Bebidas deportivas</string>
+    <string name="botanas">Botanas</string>
+    <string name="limpieza">Limpieza</string>
+    <string name="alertNoFound">Producto no encontrado</string>
+    <string name="requestConfirm">Agregaremos tu producto a la brevedad posible</string>
+    <string name="notNow">Ahora no</string>
+    <string name="notFoundMsg">Parece que no hemos encontrado el producto buscado\n¿Te gustaría que lo agregaramos?</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
